--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+### Sublime ###
+
+*.sublime-project
+*.sublime-workspace
+
+### json lock ###
+package-lock.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -123,3 +131,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Culled scripts
+culled/
+
