--- a/includes/acme/acme.yml
+++ b/includes/acme/acme.yml
@@ -29,38 +29,48 @@
 
     - name: Check for presence of SSL keys before using acme to issue new ones...
       stat:
-        path: "/etc/letsencrypt/rsa-certs/cert.pem"
+        path: /etc/letsencrypt/ecc-certs/cert.pem
       check_mode: true
       register: cert_check_result
 
-    - name: Stop nginx for initial acme certificate issuance if it's running...
-      systemd:
-        name: nginx
-        state: stopped
+    - name: Set acme to auto-upgrade itself...
+      raw: "~/.acme.sh/acme.sh --force --upgrade --auto-upgrade"
+      args:
+        executable: /bin/bash
       when: cert_check_result.stat.exists == false
 
-    - name: Issue acme RSA certificate for this server in standalone mode...
-      raw: "~/.acme.sh/acme.sh --force --issue --standalone -d {{ ansible_fqdn }} \
+    - name: Issue acme RSA certificate for this server...
+      raw: "~/.acme.sh/acme.sh --force --issue -w /var/www/letsencrypt -d {{ ansible_fqdn }} \
         --keylength 4096 --key-file /etc/letsencrypt/rsa-certs/privkey.pem \
         --ca-file /etc/letsencrypt/rsa-certs/chain.pem \
         --cert-file /etc/letsencrypt/rsa-certs/cert.pem \
-        --fullchain-file /etc/letsencrypt/rsa-certs/fullchain.pem"
+        --fullchain-file /etc/letsencrypt/rsa-certs/fullchain.pem \
+        --post-hook '/usr/sbin/service nginx restart'"
       args:
         executable: /bin/bash
+      register: cert_rsa_issue
       when: cert_check_result.stat.exists == false
 
-    - name: Issue acme ECC certificate for this server in standalone mode...
-      raw: "~/.acme.sh/acme.sh --force --issue --standalone -d {{ ansible_fqdn }} \
+    - name: Issue acme ECC certificate for this server...
+      raw: "~/.acme.sh/acme.sh --force --issue -w /var/www/letsencrypt -d {{ ansible_fqdn }} \
         --keylength ec-384 --key-file /etc/letsencrypt/ecc-certs/privkey.pem \
         --ca-file /etc/letsencrypt/ecc-certs/chain.pem \
         --cert-file /etc/letsencrypt/ecc-certs/cert.pem \
-        --fullchain-file /etc/letsencrypt/ecc-certs/fullchain.pem"
+        --fullchain-file /etc/letsencrypt/ecc-certs/fullchain.pem \
+        --post-hook '/usr/sbin/service nginx restart'"
       args:
         executable: /bin/bash
+      register: cert_ecc_issue
       when: cert_check_result.stat.exists == false
 
-#    - name: Add email to acme account settings...
-#      raw: "~/.acme.sh/acme.sh --force --update-account --accountemail {{ ans_mailaddr }}"
-#      args:
-#        executable: /bin/bash
-#      when: cert_check_result.stat.exists == false
+    - name: Apply nginx ssl config...
+      template:
+        src: "{{ item.source }}"
+        dest: "{{ item.dest }}"
+      loop:
+        - { source: 'templates/sites-available/sites_conf.j2', dest: '/etc/nginx/sites-available/sites.conf' }
+        - { source: 'templates/ssl_conf.j2', dest: '/etc/nginx/ssl.conf' }
+        - { source: 'templates/nginx_main_conf.j2', dest: '/etc/nginx/nginx.conf' }
+      register: nginx_ssl_config
+      when: (cert_rsa_issue.changed == true) or
+            (cert_ecc_issue.changed == true)
