--- a/includes/mariadb/mariadb.yml
+++ b/includes/mariadb/mariadb.yml
@@ -1,3 +1,7 @@
+    - name: Check mariadb config status...
+      shell: 'cat /etc/mysql/my.cnf'
+      register: mariadb_config
+
     - name: Delete anonymous mariadb users for this server...
       mysql_user:
         login_user: root
@@ -6,6 +10,7 @@
         host: "{{ ansible_fqdn }}"
         state: absent
       no_log: true
+      when: mariadb_config.stdout.find('Barracuda') == -1
 
     - name: Remove the mariadb test database...
       mysql_db:
@@ -13,6 +18,7 @@
         login_unix_socket: /var/run/mysqld/mysqld.sock
         db: test
         state: absent
+      when: mariadb_config.stdout.find('Barracuda') == -1
 
     - name: Secure maridb root user...
       vars:
@@ -24,17 +30,26 @@
         password: "{{ db_password }}"
         host: "{{ item.host }}"
       loop:
+        - { host: '{{ ansible_fqdn }}' }
         - { host: '::1' }
         - { host: '127.0.0.1' }
         - { host: 'localhost' }
-        - { host: '{{ ansible_fqdn }}' }
       no_log: true
+      when: mariadb_config.stdout.find('Barracuda') == -1
 
     - name: Set mariadb default configuration...
       template:
         src: templates/my_cnf.j2
         dest: /etc/mysql/my.cnf
         backup: true
+      when: mariadb_config.stdout.find('Barracuda') == -1
+
+    - name: Restart mariadb to load new config...
+      systemd:
+        name: mysql
+        enabled: true
+        state: restarted
+      when: mariadb_config.stdout.find('Barracuda') == -1
 
     - name: Create required mariadb databases...
       mysql_db:
