--- a/includes/nodered/nodered.yml
+++ b/includes/nodered/nodered.yml
@@ -8,6 +8,15 @@
         ssh_key_file: /var/nodered/.ssh/nodered_rsa.pem
       register: nodered_check
 
+    - name: Authorize nodered ssh key...
+      copy:
+        remote_src: true
+        src: /var/nodered/.ssh/nodered_rsa.pem.pub
+        dest: /var/nodered/.ssh/authorized_keys
+        owner: nodered
+        group: nodered
+        mode: 600
+
     - name: Create nodered app folder...
       file:
         path: /var/nodered/.node-red
@@ -47,7 +56,7 @@
 
     - name: Generate nodered Admin password...
       vars:
-        default_adminpassword: "{{ lookup('password', '~/ansible_defaul-admin-password-for_admin.txt length=32 chars=ascii_letters,digits') }}"
+        default_adminpassword: "{{ lookup('password', '~/ansible_default-admin-password-for_admin.txt length=32 chars=ascii_letters,digits') }}"
       shell: node -e "console.log(require('bcryptjs').hashSync(process.argv[1], 8));" "{{ default_adminpassword }}"
       become_user: nodered
       args:
@@ -58,7 +67,7 @@
 
     - name: Set nodered config variables...
       vars:
-        default_adminpassword: "{{ lookup('password', '~/ansible_defaul-admin-password-for_admin.txt length=32 chars=ascii_letters,digits') }}" 
+        default_adminpassword: "{{ lookup('password', '~/ansible_default-admin-password-for_admin.txt length=32 chars=ascii_letters,digits') }}" 
       replace:
         path: /var/nodered/.node-red/settings.js
         after: 'module.exports ='
