--- a/includes/nextcloud/nextcloud.yml
+++ b/includes/nextcloud/nextcloud.yml
@@ -109,7 +109,7 @@
 
     - name: Set links in nextcloud "external sites" to Nodered, CouchDB, and phpList...
       become_user: www-data
-      shell: php occ config:app:set external sites --value='{"1":{"icon":"external.svg","lang":"","type":"link","device":"","groups":["admin"],"redirect":false,"id":1,"name":"CouchDB","url":"https:\/\/{{ ansible_fqdn }}\/couchdb\/_utils\/#login"},"2":{"icon":"external.svg","lang":"","type":"link","device":"","groups":["admin"],"redirect":false,"id":2,"name":"NodeRed","url":"https:\/\/{{ ansible_fqdn }}\/nodered"},"3":{"id":3,"name":"phpList","url":"https:\/\/{{ ansible_fqdn }}\/lists\/admin\/","lang":"","type":"link","device":"","icon":"external.svg","groups":["admin"],"redirect":false}}'
+      shell: php occ config:app:set external sites --value='{"1":{"id":1,"name":"RssBridge","url":"https:\/\/{{ ansible_fqdn }}\/rssbridge","lang":"","type":"link","device":"","icon":"external.svg","groups":["admin"],"redirect":false},"2":{"icon":"external.svg","lang":"","type":"link","device":"","groups":["admin"],"redirect":false,"id":2,"name":"NodeRed","url":"https:\/\/{{ ansible_fqdn }}\/nodered"},"3":{"icon":"external.svg","lang":"","type":"link","device":"","groups":["admin"],"redirect":false,"id":3,"name":"phpList","url":"https:\/\/{{ ansible_fqdn }}\/lists\/admin\/"},"4":{"id":4,"name":"CouchDB","url":"https:\/\/{{ ansible_fqdn }}\/couchdb\/_utils\/#login","lang":"","type":"link","device":"","icon":"external.svg","groups":["admin"],"redirect":false}}'
       args:
         chdir: /var/www/nextcloud
       when: (nextcloud_db_check.changed == false) and
